# dcc042-2025-3-redes-trabalho-final

./: .gitignore  README.md  pyproject.toml
docs/: enunciado-trabalho.md
scripts/: benchmark.py  benchmark_10k.py  plot_results.py  run_benchmark.py
scripts/results/: benchmark_10k.json  benchmark_results.json  benchmark_table.tex
src/rudp/: cli.py  client.py  connection.py  crypto.py  packet.py  server.py  utils.py
